Use jdk.internal.classfile.components instead of copying class