@@ -72,6 +72,8 @@
             <compilerArgs>
               <arg>--enable-preview</arg>
               <arg>-Xlint:all,-preview</arg>
+              <arg>--add-exports</arg>
+              <arg>java.base/jdk.internal.classfile.components=ALL-UNNAMED</arg>
             </compilerArgs>
           </configuration>
         </plugin>
@@ -115,7 +117,7 @@
           <artifactId>maven-surefire-plugin</artifactId>
           <version>3.5.2</version>
           <configuration>
-            <argLine>@{argLine} -Djava.util.logging.config.file=src/test/resources/jul.properties --enable-preview</argLine>
+            <argLine>@{argLine} -Djava.util.logging.config.file=src/test/resources/jul.properties --add-exports java.base/jdk.internal.classfile.components=ALL-UNNAMED --enable-preview</argLine>
           </configuration>
         </plugin>
       </plugins>
